Squashed commit of the following:
commit e440d556d16efcc3ce26496bcd20cd651ac2ed47
Merge: c9946aa e93e604
Author: Kotiko <124360315+Kotiko-UA@users.noreply.github.com>
Date:   Sat Dec 30 19:21:13 2023 +0200

    Merge pull request #14 from Kotiko-UA/QA

    Qa

commit e93e6046333fab2d5429b9685156c6d9aa91a70b
Merge: e08ee59 1de27d7
Author: lusya0409 <124579497+lusya0409@users.noreply.github.com>
Date:   Sat Dec 30 18:12:52 2023 +0200

    Merge pull request #16 from Kotiko-UA/feature/swagger-user-corrected

    changes swagger user

commit e08ee59c5cb9a58d1e0fe3dc6d6e228ebfacc601
Author: IgorVolk286 <125205247+IgorVolk286@users.noreply.github.com>
Date:   Sat Dec 30 17:43:23 2023 +0200

    fix swag conflictcswith back

commit 1de27d757114950406a2595812a9e8bf809381c4
Author: lusya0409 <lusya0409@gmail.com>
Date:   Sat Dec 30 17:21:28 2023 +0200

    changes swagger user

commit c9946aa040c997e704af236189b1053e852419c2
Merge: c0088da 8ff1c80
Author: Kotiko <124360315+Kotiko-UA@users.noreply.github.com>
Date:   Fri Dec 29 16:36:19 2023 +0200

    Merge pull request #13 from Kotiko-UA/QA

    Qa

commit c0088dac3888fb90f7f832e2d12d74808e788f28
Merge: 5f97e37 404dbc2
Author: Kotiko <124360315+Kotiko-UA@users.noreply.github.com>
Date:   Fri Dec 29 12:28:18 2023 +0200

    Merge pull request #11 from Kotiko-UA/QA

    add link render server
